[package]
name = "hired"
description = "Highlighting rust clone of ed"
version = "0.12.0"
homepage = "https://github.com/sidju/hired"
repository = "https://github.com/sidju/hired"
readme = "README.md"
categories = ["text-editors"]
keywords = ["ed", "syntax-highlighting", "cli"]
authors = ["sidju <contact@sidju.se>"]
license = "MIT"
edition = "2021"

include = [
  "assets/*",
  "**/*.rs",
  "Cargo.*",
  "default_config.yaml",
]

[features]

[dependencies]
add-ed = { version = "0.13", features = ["local_io","initial_input_data","serde"] }

# Terminal interaction library, to manage key events and cursor position
# Avoid having support for bracketed paste = treat pasted input same as normal
crossterm = { version = "0.27", default-features = false, features = [
  "events",
  "windows",
]}

# Syntax highlighting
syntect = { version = "5.1", default-features = false, features = [
  "regex-fancy", # use rust regex
  "parsing", # Includes loading the compressed dump created by build.rs
] }

# Documentation printing library
termimad = "0.26"

# CLI and configuration parsing dependencies
clap = { version = "4.4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["yaml", "env"]}
# Serdes required for figment, so let figment set version
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
directories = "5.0"

[build-dependencies]
syntect = { version = "5.1" } # Onigura regex engine better handles inconsistencies in the syntax files
