[package]
name = "hired"
description = "Highlighting rust clone of ed"
version = "0.13.1"
homepage = "https://github.com/sidju/hired"
repository = "https://github.com/sidju/hired"
readme = "README.md"
categories = ["text-editors"]
keywords = ["ed", "syntax-highlighting", "cli"]
authors = ["sidju <contact@sidju.se>"]
license = "MIT"
edition = "2021"

include = [
  "assets/*",
  "**/*.rs",
  "Cargo.*",
  "default_config.yaml",
]

[features]

[dependencies]
add-ed = { version = "0.13", features = ["local_io","initial_input_data","serde"] }

# Terminal interaction library, to manage key events and cursor position
# Avoid having support for bracketed paste = treat pasted input same as normal
crossterm = { version = "0.27", default-features = false, features = [
  "events",
  "windows",
]}

# Syntax highlighting
# We import syntect via two-face, which also provides extra syntaxes for us
two-face = { version = "0.4.3", features = [ "syntect-fancy" ] }

# Documentation printing library
termimad = "0.26"

# CLI and configuration parsing dependencies
clap = { version = "4.4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["yaml", "env"]}
# Serdes required for figment, so let figment set version
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
directories = "5.0"
