[package]
name = "hired"
description = "Highlighting rust clone of ed"
version = "0.14.1"
homepage = "https://github.com/sidju/hired"
repository = "https://github.com/sidju/hired"
readme = "README.md"
categories = ["text-editors"]
keywords = ["ed", "syntax-highlighting", "cli"]
authors = ["sidju <contact@sidju.se>"]
license = "MIT"
edition = "2021"

include = [
  "assets/*",
  "**/*.rs",
  "Cargo.*",
  "default_config.yaml",
]

[features]

[dependencies]
add-ed = { version = "0.14", features = ["local_io","initial_input_data","serde"] }

# Terminal interaction library, to manage key events and cursor position
crossterm = "0.29"

# Syntax highlighting
# We import syntect via two-face, which also provides extra syntaxes for us
two-face = { version = "0.4", features = [ "syntect-fancy" ] }

# Documentation printing library
termimad = "0.31"

# CLI and configuration parsing dependencies
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["yaml", "env"]}
# Serdes required for figment, so let figment set version
serde = { version = "1.0", features = ["derive"] }

# Note that these are unmaintained, but no replacement exists
serde_yaml = "0.9"
directories = "6.0"
